--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
 [gh-actions:env]
 PLATFORM =
     ubuntu-latest: linux
-    macos-latest: macos
+    macos-latest: darwin
     windows-latest: windows
 
 [testenv]
@@ -20,7 +20,7 @@ setenv =
     DJWTO_SIGNING_KEY = "test key"
 platform =
     linux: linux
-    macos: macos
+    macos: darwin
     windows: windows
 deps =
     -rtest-requirements.txt
